--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@
 
 
       <p>
-        I am an M.Sc Data Science student with experience in machine learning projects,
+        I am an Integrated M.Sc. Data Science student with experience in machine learning projects,
         web development, and database-driven applications. I enjoy exploring new
         technologies and building end-to-end systems as part of my learning journey.
       </p>
