--- a/index.html
+++ b/index.html
@@ -1042,7 +1042,8 @@
     <section id="contact">
         <div class="section-title">
             <h2>Get in Touch</h2>
-            <p>Let's discuss your next project or opportunity</p>
+            <p>I’m actively seeking internship opportunities and open to collaborations and exciting projects.
+Let’s connect if you’re interested in working together or exchanging ideas.</p>
         </div>
         <div class="contact-content">
             <div class="contact-info">
